[tool.poetry]
name = "netbox_giftwrap"
version = "2.0.1"
description = "Transform NetBox APIs into Business Ready Documents"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "netbox_giftwrap", from = "src"}]
readme = "README.md"

[tool.poetry.scripts]
netbox_giftwrap = 'netbox_giftwrap.script:run'

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.3.0"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
aiofiles = "^22.1.0"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
